[package]
name = "actions-dl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom        = "7.1.3"
serde_json = "1.0.93"
tencent3   = "0.2.0"
tokio      = { version = "1.25.0", features = [ "full" ] }

